--- a/src/main.css
+++ b/src/main.css
@@ -16,14 +16,16 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-    background: #e0e0e0;
+    background: rgb(209, 213, 219);
+    border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: rgb(107, 114, 128);
+    border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: rgb(55, 65, 61);
 }
 
